Add new entrypoint and updated DockerFile to support Heroku deployment